--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,265 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-weight: 400;
+}
+
+.btn-plus {
+  padding: 5px 15px;
+  background-color: #59e1f7;
+  color: #fff;
+  font-size: 2rem;
+  border-radius: 10px 10px 0px 10px;
+}
+
+.content-flex {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.box {
+  padding: 15px;
+  width: 100%;
+}
+
+.content-box {
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  padding: 25px;
+  background-color: #fff;
+  position: relative;
+}
+
+.w30 {
+  width: 30%;
+}
+
+.w33 {
+  width: 33.33%;
+}
+
+.w70 {
+  width: 70%;
+}
+
+table.mat-table {
+  width: 100%;
+  .mat-header-row {
+    background-color: #f9faff;
+  }
+  tr {
+    background-color: #fff;
+  }
+  th {
+    color: #c5c8d4;
+    font-weight: 400;
+    font-size: 14px;
+  }
+  td {
+    color: #1a1a1a;
+  }
+}
+
+.mat-elevation-z8 {
+  box-shadow: none;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .header-right a,
+  .header-right button {
+    margin-left: 10px;
+    text-align: center;
+  }
+}
+
+.mat-paginator {
+  background-color: transparent;
+  * {
+    color: #1a1a1a;
+  }
+}
+
+.mat-tab-label .mat-tab-label-content {
+  color: #c5c8d4;
+}
+
+.mat-tab-label {
+  min-width: 0 !important;
+  padding: 0 10px !important;
+  border-radius: 5px;
+  height: 35px !important;
+}
+
+.mat-tab-label-active {
+  background-color: #59e1f7;
+  .mat-tab-label-content {
+    color: #fff;
+  }
+}
+
+.mat-ink-bar {
+  visibility: hidden !important;
+}
+
+.btn-add-treatment {
+  font-weight: 800;
+  background-color: #59e1f7;
+  color: #fff;
+  border: none;
+  padding: 10px 75px;
+  cursor: pointer;
+  transition: all 0.25s;
+  border-radius: 5px;
+  &:hover {
+    background-color: #51d0e4;
+  }
+}
+
+.btn-add {
+  padding: 10px 25px;
+  background-color: #00e676;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-archive {
+  padding: 10px 25px;
+  background-color: #d740009f;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-grey {
+  padding: 10px 25px;
+  background-color: #c5c8d4;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.content-treatments {
+  min-height: 175px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.patient-form-table {
+  width: 100%;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-underline {
+  display: none;
+}
+
+input.mat-input-element,
+select,
+.mat-select {
+  width: 100%;
+  border: 1px solid #dadada;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.mat-select-value {
+  color: #1a1a1a;
+}
+
+.mat-select-arrow {
+  color: #1a1a1a;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+.patient-top-box {
+  min-height: 275px;
+}
+
+.patient-notes {
+  display: flex;
+  flex-direction: column;
+  .content-notes {
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+    flex: 1;
+    display: flex;
+    width: 100%;
+    textarea {
+      background-color: #f0f0f0;
+      border: none;
+      outline: 0;
+      font-family: "Roboto", sans-serif;
+      width: 100%;
+    }
+    p {
+      margin: 0;
+    }
+  }
+}
+
+.mat-form-field-infix,
+.mat-form-field-wrapper {
+  padding: 0;
+  border-top: 0;
+  width: 100%;
+}
+
+.mat-drawer header nav .mat-list-base {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  .mat-icon {
+    font-size: 1.5rem;
+  }
+}
+
+.mat-drawer {
+  text-align: center;
+}
+
+.mat-drawer header h2 {
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+.mat-dialog-container {
+  background-color: #fff;
+  color: #1a1a1a;
+}
